# OrgParser

./: README.md
OrgParser/: .gitignore  CHANGELOG.md  LICENSE  OrgParser.cabal  README.md  TimeBench.hs  stack.yaml
OrgParser/app/: Main.hs
OrgParser/src/Data/String/: Strip.hs  test.org
OrgParser/src/Org/: Conduit.hs  Document.hs  ICS.hs  Node.hs  Parse.hs  ParseText.hs  Sexp.hs  Test.hs  haskell-window.el
OrgParser/src/Org/Google/: Client.hs  Geocoding.hs  Kml.hs  test.json
OrgParser/src/Org/GoogleCalendar/: Client.hs  Color.hs  Event.hs
OrgParser/src/Org/GoogleDrive/: Client.hs
OrgParser/src/Org/Parse/: Text.hs  Time.hs  Utility.hs
OrgParser/test/Data/String/: StripSpec.hs
OrgParser/test/Org/: NodeSpec.hs  ParseSpec.hs  ParseTextSpec.hs
OrgParser/test/Org/Parse/: TextSpec.hs  TimeSpec.hs
