cabal-version:       2.2

name:                OrgParser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jumpeiito/OrgParser#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              jumpei
maintainer:          junnpit@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Org.Parse
                     , Org.Node
                     , Org.ICS
                     , Org.GoogleCalendar.Client
                     , Org.GoogleCalendar.Event
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , time
                     , mtl
                     , shakespeare
                     , blaze-html
                     , req
                     , containers
                     , Win32
                     , aeson
                     , bytestring
                     , text
                     , string-conversions
                     , directory
                     , lens
                     , exceptions
                     , pretty-simple
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable OrgParser
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , OrgParser
                     , parsec
                     , time
                     , mtl
                     , shakespeare
                     , blaze-html
                     , containers
                     , Win32
                     , aeson
                     -- , req
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite OrgParser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.String.StripSpec
                     , Org.ParseSpec
                     , Org.NodeSpec
  build-depends:       base
                     , OrgParser
                     , hspec
                     , QuickCheck
                     , parsec
                     , time
                     , mtl
                     , containers
                     , Win32
                     , aeson
                     -- , req
  default-language:   Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/jumpeiito/OrgParser
