cabal-version:       2.2

name:                OrgParser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jumpeiito/OrgParser#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              jumpei
maintainer:          junnpit@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Org.Parse.Utility
                     , Org.Parse.Time
                     , Org.Parse.Text
                     , Org.Node
                     , Org.Conduit
                     , Org.ICS
                     , Org.Document
                     , Org.Google.Client
                     , Org.Google.Geocoding
                     , Org.Google.Kml
                     , Org.GoogleCalendar.Client
                     , Org.GoogleCalendar.Event
                     , Org.GoogleCalendar.Color
  build-depends:       base >= 4.7 && < 5
                     , time
                     , mtl
                     , req
                     , containers
                     , aeson
                     , bytestring
                     , text
                     , string-conversions
                     , directory
                     , lens
                     , exceptions
                     , extensible
                     , transformers
                     , tagged
                     , megaparsec
                     , conduit
                     , modern-uri
                     , http-types
                     , unordered-containers
                     , xml-conduit
                     , vector
                     , text-builder > 1
                     , split
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable OrgParser
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , OrgParser
                     , time
                     , mtl
                     , containers
                     , aeson
                     , optparse-applicative
                     , text-builder
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite OrgParser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.String.StripSpec
                     , Org.NodeSpec
                     , Org.Parse.TextSpec
                     , Org.Parse.TimeSpec
  build-depends:       base
                     , OrgParser
                     , hspec
                     , QuickCheck
                     , parsec
                     , time
                     , mtl
                     , containers
                     , Win32
                     , aeson
                     , tagged
                     , megaparsec
                     , lens
                     , extensible
                     , text
                     -- , req
  default-language:   Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/jumpeiito/OrgParser
